Code refactoring + module descriptions + cst fix

--- a/impl/pnr/EthernetBRIDGE.pin.html
+++ b/impl/pnr/EthernetBRIDGE.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 15 17:53:15 2023
+<td>Fri May 19 23:05:31 2023
 </td>
 </tr>
 <tr>
@@ -288,7 +288,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>IOL29[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
@@ -377,10 +377,67 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">data_from_buff[0]</td>
 <td></td>
-<td>105/2</td>
+<td>117/1</td>
 <td>N</td>
 <td>out</td>
-<td>IOR7[B]</td>
+<td>IOT40[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[1]</td>
+<td></td>
+<td>114/1</td>
+<td>N</td>
+<td>out</td>
+<td>IOT42[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[2]</td>
+<td></td>
+<td>111/1</td>
+<td>N</td>
+<td>out</td>
+<td>IOT50[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[3]</td>
+<td></td>
+<td>106/2</td>
+<td>N</td>
+<td>out</td>
+<td>IOR7[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -394,7 +451,26 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[1]</td>
+<td class="label">data_from_buff[4]</td>
+<td></td>
+<td>102/2</td>
+<td>N</td>
+<td>out</td>
+<td>IOR20[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[5]</td>
 <td></td>
 <td>123/0</td>
 <td>N</td>
@@ -413,26 +489,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[2]</td>
-<td></td>
-<td>11/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL27[A]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[3]</td>
+<td class="label">data_from_buff[6]</td>
 <td></td>
 <td>121/1</td>
 <td>N</td>
@@ -451,26 +508,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[4]</td>
-<td></td>
-<td>12/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL27[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[5]</td>
+<td class="label">data_from_buff[7]</td>
 <td></td>
 <td>119/1</td>
 <td>N</td>
@@ -485,44 +523,6 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>FAST</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[6]</td>
-<td></td>
-<td>9/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL22[A]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[7]</td>
-<td></td>
-<td>10/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL22[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -1009,7 +1009,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">123/0</td>
-<td>data_from_buff[1]</td>
+<td>data_from_buff[5]</td>
 <td>out</td>
 <td>IOT27[A]</td>
 <td>LVCMOS18</td>
@@ -1043,7 +1043,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">121/1</td>
-<td>data_from_buff[3]</td>
+<td>data_from_buff[6]</td>
 <td>out</td>
 <td>IOT30[A]</td>
 <td>LVCMOS18</td>
@@ -1077,7 +1077,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">119/1</td>
-<td>data_from_buff[5]</td>
+<td>data_from_buff[7]</td>
 <td>out</td>
 <td>IOT38[A]</td>
 <td>LVCMOS18</td>
@@ -1111,16 +1111,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">117/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[0]</td>
+<td>out</td>
 <td>IOT40[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1162,16 +1162,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">114/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[1]</td>
+<td>out</td>
 <td>IOT42[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1213,16 +1213,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">111/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[2]</td>
+<td>out</td>
 <td>IOT50[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1821,7 +1821,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">4/7</td>
@@ -1838,7 +1838,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">6/7</td>
@@ -1855,7 +1855,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">7/7</td>
@@ -1872,75 +1872,75 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">9/7</td>
-<td>data_from_buff[6]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL22[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
-<td>1.8</td>
+<td>NA</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">10/7</td>
-<td>data_from_buff[7]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL22[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
-<td>1.8</td>
+<td>NA</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">11/7</td>
-<td>data_from_buff[2]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL27[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
-<td>1.8</td>
+<td>NA</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">12/7</td>
-<td>data_from_buff[4]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL27[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
-<td>1.8</td>
+<td>NA</td>
+<td>-</td>
 </tr>
 <tr>
 <td class="label">25/6</td>
@@ -1966,7 +1966,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>IOL29[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
@@ -2131,26 +2131,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">106/2</td>
-<td>-</td>
-<td>in</td>
-<td>IOR7[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">105/2</td>
-<td>data_from_buff[0]</td>
+<td>data_from_buff[3]</td>
 <td>out</td>
-<td>IOR7[B]</td>
+<td>IOR7[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -2164,10 +2147,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">102/2</td>
+<td class="label">105/2</td>
 <td>-</td>
 <td>in</td>
-<td>IOR20[A]</td>
+<td>IOR7[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -2177,6 +2160,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">102/2</td>
+<td>data_from_buff[4]</td>
+<td>out</td>
+<td>IOR20[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
