--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 15 17:53:15 2023
+<td>Fri May 19 23:05:31 2023
 </td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>192.537</td>
+<td>207.413</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -108,14 +108,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>29.314</td>
+<td>44.190</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>28.248</td>
+<td>28.499</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>81.752</td>
+<td>81.501</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,9 +192,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>18.726</td>
+<td>33.602</td>
 <td>102.762</td>
-<td>121.488</td>
+<td>136.364</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -222,9 +222,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>1.898</td>
+<td>1.854</td>
 <td>NA</td>
-<td>12.595</td>
+<td>12.549</td>
 </tr>
 <tr>
 <td>IO</td>
@@ -234,7 +234,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>14.265
+<td>29.205
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -248,32 +248,32 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>top_mac_to_fifo_test</td>
-<td>16.163</td>
-<td>16.163(16.053)</td>
+<td>31.059</td>
+<td>31.059(30.955)</td>
 <tr>
 <td>top_mac_to_fifo_test/configurator/</td>
-<td>0.273</td>
-<td>0.273(0.000)</td>
+<td>0.010</td>
+<td>0.010(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/controller/</td>
-<td>0.230</td>
-<td>0.230(0.000)</td>
+<td>0.139</td>
+<td>0.139(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/</td>
-<td>1.104</td>
-<td>1.104(1.104)</td>
+<td>1.101</td>
+<td>1.101(1.101)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/</td>
-<td>1.104</td>
-<td>1.104(1.104)</td>
+<td>1.101</td>
+<td>1.101(1.101)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/</td>
-<td>1.104</td>
-<td>1.104(1.104)</td>
+<td>1.101</td>
+<td>1.101(1.101)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_ctrl/</td>
-<td>0.203</td>
-<td>0.203(0.000)</td>
+<td>0.199</td>
+<td>0.199(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_if_block/</td>
 <td>0.050</td>
@@ -327,6 +327,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.035</td>
 <td>0.035(0.000)</td>
 <tr>
+<td>top_mac_to_fifo_test/rx_frm_len_fifo/</td>
+<td>15.260</td>
+<td>15.260(0.000)</td>
+<tr>
 <td>top_mac_to_fifo_test/rxfifo/</td>
 <td>14.445</td>
 <td>14.445(0.000)</td>
@@ -339,29 +343,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>phy_mdc_d</td>
+<td>phy_rx_clk</td>
 <td>100.000</td>
-<td>0.299</td>
+<td>30.105</td>
 </tr>
 <tr>
 <td>phy_tx_clk</td>
 <td>100.000</td>
-<td>0.913</td>
+<td>0.882</td>
 </tr>
 <tr>
-<td>phy_rx_clk</td>
+<td>phy_mdc_d</td>
 <td>100.000</td>
-<td>14.816</td>
+<td>0.035</td>
 </tr>
 <tr>
 <td>clk</td>
 <td>100.000</td>
-<td>0.099</td>
-</tr>
-<tr>
-<td>rx_stat_valid</td>
-<td>100.000</td>
-<td>0.118</td>
+<td>0.100</td>
 </tr>
 </table>
 </div><!-- content -->
