improve tbs + sv update

--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -29,25 +29,25 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">-</td>
-<td align = "center">13</td>
-<td align = "center">6</td>
+<td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
+<td align = "center">10</td>
+<td align = "center">20</td>
+<td align = "center">14</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--configurator
- (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">6</td>
-<td align = "center">-</td>
-<td align = "center">7</td>
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
+<td align = "center">28</td>
+<td align = "center">14</td>
+<td align = "center">27</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--mac
- (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
@@ -56,7 +56,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
- (E:/EthernetBRIDGE/src/mac_controller.v)</td>
+ (E:/EthernetBRIDGE/src/mac_controller.sv)</td>
 <td align = "center">562</td>
 <td align = "center">-</td>
 <td align = "center">721</td>
@@ -65,28 +65,28 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">23</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--controller
- (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">37</td>
 <td align = "center">-</td>
-<td align = "center">121</td>
+<td align = "center">126</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--rxfifo
- (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">24</td>
 <td align = "center">22</td>
-<td align = "center">6</td>
+<td align = "center">5</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--rx_frm_len_fifo
- (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">40</td>
 <td align = "center">38</td>
-<td align = "center">12</td>
+<td align = "center">13</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
