--- a/impl/pnr/EthernetBRIDGE.pin.html
+++ b/impl/pnr/EthernetBRIDGE.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Fri May 19 23:05:31 2023
+<td>Sat Jun 03 16:50:16 2023
 </td>
 </tr>
 <tr>
@@ -364,7 +364,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>IOB6[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
@@ -687,7 +687,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>IOB6[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NONE</td>
 <td>OFF</td>
@@ -1286,7 +1286,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>IOB6[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NONE</td>
 <td>OFF</td>
@@ -1303,7 +1303,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>IOB6[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
