--- a/impl/pnr/EthernetBRIDGE.rpt.html
+++ b/impl/pnr/EthernetBRIDGE.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Fri May 19 23:05:31 2023
+<td>Sat Jun 03 16:50:16 2023
 </td>
 </tr>
 <tr>
@@ -97,23 +97,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.122s, Elapsed time = 0h 0m 0.122s
-   Placement Phase 1: CPU time = 0h 0m 0.233s, Elapsed time = 0h 0m 0.233s
-   Placement Phase 2: CPU time = 0h 0m 0.138s, Elapsed time = 0h 0m 0.139s
-   Placement Phase 3: CPU time = 0h 0m 0.859s, Elapsed time = 0h 0m 0.858s
+   Placement Phase 0: CPU time = 0h 0m 0.118s, Elapsed time = 0h 0m 0.118s
+   Placement Phase 1: CPU time = 0h 0m 0.24s, Elapsed time = 0h 0m 0.24s
+   Placement Phase 2: CPU time = 0h 0m 0.142s, Elapsed time = 0h 0m 0.142s
+   Placement Phase 3: CPU time = 0h 0m 0.893s, Elapsed time = 0h 0m 0.892s
    Total Placement: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0.001s
-   Routing Phase 1: CPU time = 0h 0m 0.13s, Elapsed time = 0h 0m 0.13s
+   Routing Phase 1: CPU time = 0h 0m 0.126s, Elapsed time = 0h 0m 0.127s
    Routing Phase 2: CPU time = 0h 0m 0.425s, Elapsed time = 0h 0m 0.425s
-   Total Routing: CPU time = 0h 0m 0.556s, Elapsed time = 0h 0m 0.556s
+   Total Routing: CPU time = 0h 0m 0.552s, Elapsed time = 0h 0m 0.553s
 Generate output files:
    CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 346MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 336MB</td>
 </tr>
 </table>
 <br/>
@@ -128,12 +128,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>1089/20736</td>
+<td>1091/20736</td>
 <td>6%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>951(871 LUT, 80 ALU, 0 ROM16)</td>
+<td>953(873 LUT, 80 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -143,7 +143,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>669/15909</td>
+<td>668/15909</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -153,7 +153,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>659/15552</td>
+<td>658/15552</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -168,8 +168,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>725/10368</td>
-<td>7%</td>
+<td>731/10368</td>
+<td>8%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -299,7 +299,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">PRIMARY</td>
-<td>4/8(50%)</td>
+<td>3/8(38%)</td>
 </tr>
 <tr>
 <td class="label">LW</td>
@@ -344,11 +344,6 @@ Generate output files:
 <td class="label">phy_tx_clk_d</td>
 <td>PRIMARY</td>
 <td> TR BR BL</td>
-</tr>
-<tr>
-<td class="label">phy_mdc_d</td>
-<td>PRIMARY</td>
-<td> TR TL BL</td>
 </tr>
 <tr>
 <td class="label">clk_tx_ena_int</td>
@@ -634,7 +629,7 @@ Generate output files:
 <td>IOB6[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
@@ -957,7 +952,7 @@ Generate output files:
 <td>IOB6[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NONE</td>
 <td>OFF</td>
@@ -1556,7 +1551,7 @@ Generate output files:
 <td>IOB6[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NONE</td>
 <td>OFF</td>
@@ -1573,7 +1568,7 @@ Generate output files:
 <td>IOB6[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
